--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,11 +2,13 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@import 'components/input';
 @import 'components/button';
 @import 'components/card';
 @import 'components/alert';
 @import 'components/badge';
 @import 'components/typography';
+@import 'components/utility';
 
 .container{
     @apply px-4 py-6 mx-auto max-w-7xl sm:px-6 lg:px-8;
