--- a/resources/scss/components/card.scss
+++ b/resources/scss/components/card.scss
@@ -1,5 +1,5 @@
 .card {
-    @apply  max-w-full mx-auto overflow-hidden bg-white shadow-md dark:bg-dark-3 dark:text-slate-300 rounded-xl;
+    @apply mb-6 overflow-hidden bg-white shadow-md dark:bg-dark-3 dark:text-slate-300 rounded-xl;
 
     &.card-primary {
         @apply border-t-4 border-primary-600 dark:border-primary-400;
@@ -25,7 +25,7 @@
 }
 
 .card-sub-title {
-    @apply px-6 text-sm font-medium text-dark-1 dark:text-secondary-700;
+    @apply  text-sm font-medium text-dark-1 dark:text-secondary-300;
 }
 
 .card-body{
