--- a/resources/scss/components/typography.scss
+++ b/resources/scss/components/typography.scss
@@ -3,29 +3,29 @@ h1 {
 }
 
 h2 {
-    @apply py-2 font-semibold  text-3xl text-primary-500 dark:text-indigo-300;
+    @apply py-2 font-semibold  text-3xl text-primary-500 dark:text-primary-300;
 }
 
 h3 {
-    @apply py-2 font-semibold  text-2xl text-primary-500 dark:text-indigo-300;
+    @apply py-2 font-semibold  text-2xl text-primary-500 dark:text-primary-300;
 }
 
 h4 {
-    @apply py-2 font-semibold  text-xl text-primary-500 dark:text-indigo-300;
+    @apply py-2 font-semibold  text-xl text-primary-500 dark:text-primary-300;
 }
 h5 {
-    @apply py-2 font-semibold  text-lg text-primary-500 dark:text-indigo-300;
+    @apply py-2 font-semibold  text-lg text-primary-500 dark:text-primary-300;
 }
 h6 {
-    @apply py-2 font-semibold  text-sm text-primary-500 dark:text-indigo-300;
+    @apply py-2 font-semibold  text-sm text-primary-500 dark:text-primary-300;
 }
 
 p {
-    @apply py-2 text-gray-600 dark:text-indigo-300;
+    @apply py-2 text-gray-600 dark:text-primary-300;
 }
 
 p a {
-    @apply text-primary-500 dark:text-indigo-300;
+    @apply text-primary-500 dark:text-primary-300;
 }
 
 table {
@@ -33,7 +33,7 @@ table {
 }
 
 thead tr {
-    @apply px-6 py-3 text-left text-xs font-medium bg-slate-200 text-slate-500 dark:bg-slate-700 dark:text-slate-200 uppercase tracking-wider;
+    @apply px-6 py-3 text-left text-xs font-medium bg-slate-200 text-slate-500 dark:bg-dark-2 dark:text-slate-200 uppercase tracking-wider;
 }
 
 thead th {
@@ -41,19 +41,19 @@ thead th {
 }
 
 thead tr a {
-    @apply text-primary-500 dark:text-indigo-200;
+    @apply text-primary-500 dark:text-primary-200;
 }
 
 tbody tr {
-    @apply bg-white dark:bg-slate-900 divide-y dark:divide-slate-800  dark:hover:bg-slate-900/80 hover:bg-slate-50;
+    @apply bg-white dark:bg-dark-3 divide-y dark:divide-dark-2  dark:hover:bg-dark-3/80 hover:bg-slate-50;
 }
 
 tbody td {
-    @apply px-6 py-4 border-t dark:border-t-slate-800 whitespace-nowrap text-left text-slate-700 dark:text-slate-300;
+    @apply px-6 py-4 border-t dark:border-t-dark-2 whitespace-nowrap text-left text-slate-700 dark:text-slate-300;
 }
 
 tbody td a {
-    @apply text-primary-500 dark:text-indigo-300 dark:hover:text-indigo-200;
+    @apply text-primary-500 dark:text-primary-300 dark:hover:text-primary-200;
 }
 
 hr {
